--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="aide démarches administratives fiscales déclarations impôtsurlerevenu allocations familiales antai" />
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/581467febc.js" crossorigin="anonymous"></script>
     <title>Association d'aide aux démarches fiscales et administratives</title>
   </head> 
 
@@ -87,6 +88,22 @@
          </article>
        </div>  
  </section>
+ 
+ <footer class="h-1000 row no-gutters pt-3 align-items-center bg-secondary">
+  <div class="col-4">
+    <div class="p-3">
+     <p>Copyright 2021</p>
+    </div>
+  </div> 
+  <div class="col-8">
+    <ul class="icons list-unstyled list-inline">
+      <li><ahref="#"><i class="fab fa-facebook"></i></ahref></li>
+      <li><ahref="#"><i class="fab fa-twitter"></i></ahref></li>
+      <li><ahref="#"><i class="fab fa-linkedin"></i></ahref></li>
+      <li><ahref="#"><i class="fab fa-instagram"></i></ahref></li>
+  </ul>
+  </div>
+  </footer>
 
 
  
