add colors to icons

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
   <div class="row no-gutters">
     <div class="pmains col-12">
-      <img src="./ressources/clavier ordi.jpg" alt="clavier"/>
+      <img src="./ressources/clavier ordi.jpg" class="img-fluid" alt="clavier d'ordinateur"/>
     </div>
   </div>
 
