--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="aide démarches administratives fiscales déclarations impôtsurlerevenu allocations familiales antai" />
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/581467febc.js" crossorigin="anonymous"></script>
     <title>Association d'aide aux démarches fiscales et administratives</title>
   </head> 
 
@@ -87,6 +88,22 @@
          </article>
        </div>  
  </section>
+
+ <footer class="h-300 row no-gutters p-3 align-items-center bg-secondary">
+  <div class="col-4 align-items-center align-middle">
+    <p class="p-2 m-1 text-center align-middle"> copyright 2021 Tous droits réservés</p>
+  </div> 
+
+  <div class="col-8">
+    <ul class="icons list-unstyled list-inline"> 
+      <li><ahref="<i class="fab fa-facebook"></i></a></li>
+      <li><ahref="<i class="fab fa-twitter-square"></i></a></li>
+      <li><ahref="<i class="fab fa-linkedin-in"></i></a></li>
+      <li><ahref=<i class="fab fa-instagram"></i></a></li>
+    </ul>  
+  </div>
+</footer>
+
 
 
  
