--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
  
     <div class="row no-gutters">
       <div class="pmains col-12 position-relative">
-        <img src="./ressources/handshake-440959_640.jpg" class="img-fluid" alt="poignée de mains"/>
+        <img src="./ressources/poignées de mains2.jpg" class="img-responsive" alt="poignée de mains"/>
       
       <div class="comment position-absolute">
         <center><h2>Venez nous voir</h2></center>
@@ -44,8 +44,8 @@
   
       <section class="présentation col-12">
         <div class="row no-gutters justify-content-center">
-          <article class="col-12 col-lg-11 p-3 d-flex flex-column border border-dark text-justify">
-            <h2>Nous vous aidons</h2>
+          <article class="col-lg-12 pt-3 d-flex flex-column border border-dark text-justify">
+            <h2 class="text-center">Nous vous aidons</h2>
             <p class="m-3">
             Vous devez faire votre déclaration d’impôt sur le revenu, mais vous ne savez pas où déclarer certains revenus ou réductions d’impôts ?<br>
             <br>
@@ -66,9 +66,9 @@
  
   <section class="asso col-12">
         <div class="row no-gutters justify-content-center">
-          <article class="col-12 col-lg-11 p-3 d-flex flex-column border border-dark text-justify">
+          <article class="col-lg-12 p-3 d-flex flex-column border border-dark text-justify">
           <p class="m-3">
-          <h2>Pour vos démarches et déclarations</h2>  
+          <h2 class="text-center">Pour vos démarches et déclarations</h2>  
           Que vous soyez retraité, en activité, étudiant, vous devez à faire vos démarches fiscales
           (impôts,etc ...), sociales ( allocations familiales, logements étudiants,etc...) et autres comme le 
           renouvellement de carte d’identité, carte grise. 
