--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
-
+  <script src="https://kit.fontawesome.com/581467febc.js" crossorigin="anonymous"></script>
   <title>contact</title>
 </head>
 <body class="container-fluid">
@@ -33,7 +33,7 @@
 
   <div class="row no-gutters">
     <div class="pmains col-12">
-      <img src="./ressources/clavier ordi.jpg" class="img-fluid" alt="clavier d'ordinateur"/>
+      <img src="./ressources/clavier ordi.jpg" class="img-responsive" alt="clavier d'ordinateur"/>
     </div>
   </div>
 
@@ -71,6 +71,22 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
-  
+    <footer class="h-300 row no-gutters p-3 bg-secondary">
+      <div class="col-4">
+        <p class="p-2 m-1 text-left align-middle"> copyright 2021 Tous droits réservés</p>
+      </div> 
+    
+      <div class="col-8">
+        <ul class="icons list-unstyled list-inline"> 
+          <li><ahref="<i class="fab fa-facebook"></i></a></li>
+          <li><ahref="<i class="fab fa-twitter-square"></i></a></li>
+          <li><ahref="<i class="fab fa-linkedin-in"></i></a></li>
+          <li><ahref=<i class="fab fa-instagram"></i></a></li>
+        </ul>  
+      </div>
+    
+      <div class="col-12">
+        <p class="p-2 text-left">N.B. : ce site est fictif, il s'agit d'un exercice.</p>
+      </div> 
 </body>
 </html>
