finishing footer to index.html

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
           <article class="col-lg-12 p-3 d-flex flex-column border border-dark text-justify">
           <p class="m-3">
           <h2 class="text-center">Pour vos démarches et déclarations</h2>  
-          Que vous soyez retraité, en activité, étudiant, vous devez à faire vos démarches fiscales
+          Que vous soyez retraité, en activité, étudiant, vous devez faire vos démarches fiscales
           (impôts,etc ...), sociales ( allocations familiales, logements étudiants,etc...) et autres comme le 
-          renouvellement de carte d’identité, carte grise. 
+          renouvellement de carte d’identité, carte grise, par internet. 
           Les plus sollicités du moment sont&nbsp;:
           <a href="evenements.html">ici</a><br>
           <br>
@@ -89,9 +89,9 @@
        </div>  
  </section>
 
- <footer class="h-300 row no-gutters p-3 align-items-center bg-secondary">
-  <div class="col-4 align-items-center align-middle">
-    <p class="p-2 m-1 text-center align-middle"> copyright 2021 Tous droits réservés</p>
+ <footer class="h-300 row no-gutters p-3 bg-secondary">
+  <div class="col-4">
+    <p class="p-2 m-1 text-left align-middle"> copyright 2021 Tous droits réservés</p>
   </div> 
 
   <div class="col-8">
@@ -102,6 +102,12 @@
       <li><ahref=<i class="fab fa-instagram"></i></a></li>
     </ul>  
   </div>
+
+  <div class="col-12">
+    <p class="p-2 text-left">N.B. : ce site est fictif, il s'agit d'un exercice.</p>
+  </div>
+  
+  
 </footer>
 
 
