--- a/apropos.html
+++ b/apropos.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/581467febc.js" crossorigin="anonymous"></script>
 
-   <title>coordonnées</title>
+   <title>l'équipe</title>
 
 
 </head>
@@ -20,7 +20,7 @@
       </div>
     </div> 
     <div class="col-8 d-none d-md-block">
-      <h1 class="m-2">Association d'Aide aux Démarches Fiscales et Administratives</h1>                
+      <p class="titre m-2">Association d'Aide aux Démarches Fiscales et Administratives</p>                
     </div>
   </header>
 
@@ -28,7 +28,7 @@
       <ul class="navbar-nav">
        <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="index.html">Accueil</a></li>
        <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="#">Qui sommes-nous&nbsp;?</a></li>
-       <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="evenemnts.html">vos évènements</a></li>
+       <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="evenements.html">vos évènements</a></li>
        <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="contact.html">Contact</a></li>
      </ul>
     </nav>
@@ -36,7 +36,7 @@
   
   <main class="container-fluid">
     <div class="row no-gutters justify-content-center">
-      <h2 class="titre m-2">Nous vous accueillons</h2>
+      <h1 class="titre text-center m-2">Nous vous accueillons</h1>
       
     </div>    
 
@@ -93,12 +93,17 @@
       <p> Devant la constatation que les sites administratifs ne sont pas toujours compréhensibles mais
         de plus en plus incontournables, nous avons  créé l'Association d'Aide aux Déclarations et Démarches Administratives
         dans le but d’aider ceux pour qui l’informatique n’est pas le quotidien.  En zone rurale comme la notre, l’accés à
-        internet n’est pas facile, et le nombre de retraités est important. Nous ne devons pas oublier les jeunes pour qui étudier demande de longs trajets et des hébergements.<br>
+        internet n’est pas facile, et le nombre de retraités est important. Nous ne devons pas oublier les jeunes pour qui 
+        étudier doivent faire de longs trajets et louer des hébergements.<br>
+        Nous sommes là pour vous aider à réaliser vos déclarations et démarches en ligne.
+        Nous avons une démarche didactique, c'est à dire que nous vous expliquerons comment aller
+        sur vos espaces utilisateurs et vous en servir. Vous pouvez venir avec un membre de votre famille, si
+        vous le souhaitez.
         Donc n’hésitez pas à nous solliciter.<br> 
         Pour prendre contact cliquez <a href="contact.html">ici</a>
     </div>
 
-    <footer class="h-300 row no-gutters p-3 bg-secondary">
+    <footer class="h-300 row no-gutters p-3 border border-dark bg-secondary">
       <div class="col-4">
         <p class="p-2 m-1 text-left align-middle"> copyright 2021 Tous droits réservés</p>
       </div> 
