--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
       </div> 
       <div class="col-8 d-none d-md-block">
-        <h1 class="m-2">Association d'Aide aux Démarches Fiscales et Administratives</h1>              
+        <p class="titre m-2">Association d'Aide aux Démarches Fiscales et Administratives<p1>              
       </div>
     </header>
 
@@ -26,7 +26,7 @@
            <ul class="navbar-nav">
           <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="#">Accueil</a></li>
           <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="apropos.html">Qui sommes-nous&nbsp;?</a></li>
-          <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="evenemnts.html">vos évènements</a></li>
+          <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="evenements.html">vos évènements</a></li>
           <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
      </nav>
@@ -36,7 +36,7 @@
         <img src="./ressources/poignées de mains2.jpg" class="img-responsive" alt="poignée de mains"/>
       
       <div class="comment position-absolute">
-        <center><h2>Venez nous voir</h2></center>
+        <center><h1>Venez nous voir</h1></center>
       </div> 
       </div>
     </div>
@@ -75,8 +75,8 @@
           Les plus sollicités du moment sont&nbsp;:
           <a href="evenements.html">ici</a><br>
           <br>
-          L'équipe de l'Association d'Aide aux Démarches Fiscales et Administratives constituée de 
-          professionnels en activité ou à la retraite peut vous aider.<br>
+          L'équipe de l'Association d'Aide aux Démarches Fiscales et Administratives (AADFA) constituée de 
+          professionnels en activité ou à la retraite est là pour vous aider.<br>
           <br>
           <a href="apropos.html">cliquez ici pour rencontrer notre équipe</a><br>
           <br> 
@@ -89,23 +89,8 @@
        </div>  
  </section>
  
- <footer class="h-1000 row no-gutters pt-3 align-items-center bg-secondary">
-  <div class="col-4">
-    <div class="p-3">
-     <p>Copyright 2021</p>
-    </div>
-  </div> 
-  <div class="col-8">
-    <ul class="icons list-unstyled list-inline">
-      <li><ahref="#"><i class="fab fa-facebook"></i></ahref></li>
-      <li><ahref="#"><i class="fab fa-twitter"></i></ahref></li>
-      <li><ahref="#"><i class="fab fa-linkedin"></i></ahref></li>
-      <li><ahref="#"><i class="fab fa-instagram"></i></ahref></li>
-  </ul>
-  </div>
-  </footer>
-
- <footer class="h-300 row no-gutters p-3 bg-secondary">
+ 
+ <footer class="h-300 row no-gutters p-3 border border-dark bg-secondary">
   <div class="col-4">
     <p class="p-2 m-1 text-left align-middle"> copyright 2021 Tous droits réservés</p>
   </div> 
