--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       </div>
     </div> 
     <div class="col-8 d-none d-md-block">
-      <h1 class="m-2">Association d'Aide aux Démarches Fiscales et Administratives</h1>                
+      <p class="titre m-2">Association d'Aide aux Démarches Fiscales et Administratives</p>                
     </div>
   </header>
 
@@ -25,7 +25,7 @@
     <ul class="navbar-nav">
      <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="index.html">Accueil</a></li>
      <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="apropos.html">Qui sommes-nous&nbsp;?</a></li>
-     <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="evenemnts.html">vos évènements</a></li>
+     <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="evenements.html">vos évènements</a></li>
      <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="#">Contact</a></li>
    </ul>
   </nav>
@@ -40,38 +40,38 @@
 
 
   <div class="row no-gutters m-3 justify-content-center">
-    <article class="row row-cols-sm-12 row-cols-md-1 row-cols-lg-1 p-3">
+    <article class="cols-sm-12 row-cols-md-1 row-cols-lg-1 p-3">
+      <h1>Nous contacter</h1><br>
+      <br>
       <h2 class="m-1">Nos horaires</h2>
     <p> Nous sommes les mardis et jeudi de 18H00 à 20H00 à la salle Jean-louis Dieux au luc en Provence,<br>
     <br>
     <h2>Nos coordonnées</h2>
     <p>Pour des raisons de confidentialité, merci de prendre rendez-vous au numéro suivant:
       <a href="tel:0600000000">06.00.00.00.00</a><br>
-   <br>
-  </p>
-  <p>
-   Ou posez-nous vos questions par mail à :
+    <br>
+    </p>
+    <p>
+     Ou posez-nous vos questions par mail à :
      <a href="email@example.com">email@example.com</a>
-   </p>
-  </article>
+     </p>
+   </article>
   </div>
-   
-  <div class="row no-gutters m-3 justify-content-center"></div>
+
+
     <aside class="row row-cols-sm-12 row-cols-md-12 row-cols-lg-12 no-gutters justify-content-center">
        <iframe class="embed-responsive-item m-1 overflow-hidden"
      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2899.233153302008!2d6.310475315357477!3d43.393055979131006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c94eae3bf552bb%3A0x26069d58b50538d7!2sAvenue%20Pierre%20Gaudin%2C%2083340%20Le%20Luc!5e0!3m2!1sfr!2sfr!4v1623175120323!5m2!1sfr!2sfr"
      width ="550" height="550"
      style="border: 1px solid black;">
       </iframe>  
+ 
 
     </aside>
   </div>  
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
-    <footer class="h-300 row no-gutters p-3 bg-secondary">
+    <footer class="h-300 row no-gutters p-3 border border-dark bg-secondary">
       <div class="col-4">
         <p class="p-2 m-1 text-left align-middle"> copyright 2021 Tous droits réservés</p>
       </div> 
@@ -88,5 +88,15 @@
       <div class="col-12">
         <p class="p-2 text-left">N.B. : ce site est fictif, il s'agit d'un exercice.</p>
       </div> 
+
+
+
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
+
+
+
 </body>
 </html>
