add bootstrap files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="aide démarches administratives fiscales déclarations impôtsurlerevenu allocations familiales antai" />
+    <meta name="description" content="aide démarches administratives fiscales déclarations impôtsurlerevenu allocationsfamiliales antai aide social immatriculation bus " />
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/581467febc.js" crossorigin="anonymous"></script>
@@ -12,12 +12,12 @@
 
   <body class="container-fluid">
     <header class="h-100 row no-gutters pt-3 align-items-center">
-      <div class="col-4">
+      <div class="col-3">
         <div class="logo">
-         <img class="h-100 w-200 p-3" src="./ressources/logo_large.png">
+         <img class="img-responsive" src="./ressources/logo_large.png" alt="logo">
         </div>
       </div> 
-      <div class="col-8 d-none d-md-block">
+      <div class="col-9 d-none d-md-block">
         <p class="titre m-2">Association d'Aide aux Démarches Fiscales et Administratives<p1>              
       </div>
     </header>
@@ -32,7 +32,7 @@
      </nav>
  
     <div class="row no-gutters">
-      <div class="pmains col-12 position-relative">
+      <div class="pmains position-relative">
         <img src="./ressources/poignées de mains2.jpg" class="img-responsive" alt="poignée de mains"/>
       
       <div class="comment position-absolute">
@@ -67,8 +67,7 @@
   <section class="asso col-12">
         <div class="row no-gutters justify-content-center">
           <article class="col-lg-12 p-3 d-flex flex-column border border-dark text-justify">
-          <p class="m-3">
-          <h2 class="text-center">Pour vos démarches et déclarations</h2>  
+           <h2 class="text-center">Pour vos démarches et déclarations</h2>  
           Que vous soyez retraité, en activité, étudiant, vous devez faire vos démarches fiscales
           (impôts,etc ...), sociales ( allocations familiales, logements étudiants,etc...) et autres comme le 
           renouvellement de carte d’identité, carte grise, par internet. 
@@ -84,7 +83,7 @@
           une cotisation de 3&nbsp;€ à 10&nbsp;€ selon le service demandé 
           valable toute une année, pour couvrir les frais de connection à internet et l’utilisation de nos
           ordinateurs et imprimantes personnels.
-         </p>
+         
          </article>
        </div>  
  </section>
