change padding to titles

--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,11 @@
   <header class="h-100 row no-gutters pt-3 align-items-center">
     <div class="col-3">
       <div class="logo">
-       <img class="h-100 w-200 p-3" src="./ressources/logo_large.png">
+       <img class="img-responsive" src="./ressources/logo_large.png" alt="logo">
       </div>
     </div> 
-    <div class="col-9 d-none d-md-block">
-      <p class="titre m-2">Association d'Aide aux Démarches Fiscales et Administratives</p>                
+    <div class="col-9 p-3 d-none d-md-block">
+      <p class="titre">Association d'Aide aux Démarches Fiscales et Administratives</p>                
     </div>
   </header>
 
