--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="aide démarches administratives fiscales déclarations impôtsurlerevenu allocationsfamiliales antai aide social immatriculation bus " />
+    <meta name="description" content="aide démarches administratives fiscales déclarations impôt allocationsfamiliales social cesu immatriculation bus transport" />
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/581467febc.js" crossorigin="anonymous"></script>
@@ -17,8 +17,8 @@
          <img class="img-responsive" src="./ressources/logo_large.png" alt="logo">
         </div>
       </div> 
-      <div class="col-9 d-none d-md-block">
-        <p class="titre m-2">Association d'Aide aux Démarches Fiscales et Administratives<p1>              
+      <div class="col-9 p-3 pl-5 text-justify align-items-center d-none d-md-block">
+        <p class="titre">Association d'Aide aux Démarches Fiscales et Administratives<p1>              
       </div>
     </header>
 
@@ -53,7 +53,7 @@
             <br>
             Vous devez renouveler votre Carte d’identité&nbsp;?<br>
             <br> 
-            Vous devez régler une contravention en ligne, et vous ne savez pas comment faire&nbsp;?<br>
+            Vous aimeriez utiliser les tickets CESU, mais vous ne savez pas comment faire&nbsp;?<br>
             <br>
             La quasi-totalité des démarches se font aujourd’hui en ligne. Mais, pas tout le monde n’a accès à internet.<br>
             Vous connaissez certainement dans votre entourage des personnes qui ne l’utilisent jamais.<br>
