--- a/apropos.html
+++ b/apropos.html
@@ -14,13 +14,13 @@
 </head>
 <body class="container-fluid">
   <header class="h-100 row no-gutters pt-3 align-items-center">
-    <div class="col-4">
+    <div class="col-3">
       <div class="logo">
-       <img class="h-100 w-200 p-3" src="./ressources/logo_large.png">
+       <img class="img-responsive" src="./ressources/logo_large.png" alt="logo">
       </div>
     </div> 
-    <div class="col-8 d-none d-md-block">
-      <p class="titre m-2">Association d'Aide aux Démarches Fiscales et Administratives</p>                
+    <div class="col-9 p-3 d-none d-md-block">
+      <p class="titre">Association d'Aide aux Démarches Fiscales et Administratives</p>                
     </div>
   </header>
 
@@ -91,11 +91,11 @@
       <article class="row row-cols-sm-1 row-cols-md-8 text-justify border border-primary p-3">
         <h2 class="m-1">Notre association</h2>
       <p> Devant la constatation que les sites administratifs ne sont pas toujours compréhensibles mais
-        de plus en plus incontournables, nous avons  créé l'Association d'Aide aux Déclarations et Démarches Administratives
+        de plus en plus incontournables, nous avons créé l'Association d'Aide aux Déclarations et Démarches Administratives
         dans le but d’aider ceux pour qui l’informatique n’est pas le quotidien.  En zone rurale comme la notre, l’accés à
-        internet n’est pas facile, et le nombre de retraités est important. Nous ne devons pas oublier les jeunes pour qui 
-        étudier doivent faire de longs trajets et louer des hébergements.<br>
-        Nous sommes là pour vous aider à réaliser vos déclarations et démarches en ligne.
+        internet n’est pas facile, et le nombre de retraités est important. Nous ne devons pas oublier les jeunes, qui pour 
+        étudier, doivent faire de longs trajets et louer des hébergements.<br>
+        Nous sommes là pour vous aider à réaliser vos déclarations et démarches en ligne.<br>
         Nous avons une démarche didactique, c'est à dire que nous vous expliquerons comment aller
         sur vos espaces utilisateurs et vous en servir. Vous pouvez venir avec un membre de votre famille, si
         vous le souhaitez.
