--- a/evenements.html
+++ b/evenements.html
@@ -14,13 +14,13 @@
 <body class="container-fluid">
   
   <header class="h-100 row no-gutters pt-3 align-items-center">
-    <div class="col-4">
+    <div class="col-3">
       <div class="logo">
-       <img class="h-100 w-200 p-3" src="./ressources/logo_large.png">
+       <img class="img-responsive" src="./ressources/logo_large.png" alt="logo">
       </div>
     </div> 
-    <div class="col-8 d-none d-md-block">
-      <h1 class="m-2">Association d'Aide aux Démarches Fiscales et Administratives</h1>                
+    <div class="col-9 p-3 d-none d-md-block">
+      <h1 class="titre">Association d'Aide aux Démarches Fiscales et Administratives</h1>                
     </div>
   </header>
 
