--- a/apropos.html
+++ b/apropos.html
@@ -19,7 +19,7 @@
        <img class="img-responsive" src="./ressources/logo_large.png" alt="logo">
       </div>
     </div> 
-    <div class="col-9 p-3 d-none d-md-block">
+    <div class="col-9 p-3 pl-5 text-justify align-items-center d-none d-md-block">
       <p class="titre">Association d'Aide aux Démarches Fiscales et Administratives</p>                
     </div>
   </header>
@@ -41,14 +41,14 @@
     </div>    
 
     <div class="row">
-      <section class="cartes">
-          <div class="row row-cols-sm-3 row-cols-md-4 justify-content-center">
+      <section class="cartes border border-primary m-2">
+          <div class="row row-cols-sm-3 row-cols-md-4 justify-content-center m-2">
             
             <article class="col p-2">
                 <div class="card">
                     <img src="./ressources/président.jpg" class="card-img-top rounded-lg" alt="portait président de l'association">
                     <div class="card-body">
-                        <h5 class="card-title">Pierre</h5>
+                        <h5 class="card-title text-center">Pierre</h5>
                         <ul class="list-group list-group-flush">
                           <li class="list-group-item">Président de l'association</li>
                           <li class="list-group-item">Retraité de</li>
@@ -61,7 +61,7 @@
                 <div class="card">
                     <img src="./ressources/comptable.jpg" class="card-img-top rounded-lg" alt="portrait secrétaire de l'association">
                     <div class="card-body">
-                        <h5 class="card-title">Quentin</h5>
+                        <h5 class="card-title text-center">Quentin</h5>
                         <ul class="list-group list-group-flush">
                           <li class="list-group-item">Secrétaire de l'association</li>
                           <li class="list-group-item">En activité</li>
@@ -74,7 +74,7 @@
                 <div class="card">
                     <img src="./ressources/assistante sociale.jpg" class="card-img-top rounded-lg" alt="portrait trésorière de l'association">
                     <div class="card-body">
-                        <h5 class="card-title">Victorine</h5>
+                        <h5 class="card-title text-center">Victorine</h5>
                         <ul class="list-group list-group-flush">
                           <li class="list-group-item">Trésorière de l'association</li>
                           <li class="list-group-item">Retraitée de</li>
@@ -87,7 +87,7 @@
       </section>
     </div>
     
-    <div class="row no-gutters m-3">
+    <div class="row no-gutters m-2">
       <article class="row row-cols-sm-1 row-cols-md-8 text-justify border border-primary p-3">
         <h2 class="m-1">Notre association</h2>
       <p> Devant la constatation que les sites administratifs ne sont pas toujours compréhensibles mais
