--- a/evenements.html
+++ b/evenements.html
@@ -19,7 +19,7 @@
        <img class="img-responsive" src="./ressources/logo_large.png" alt="logo">
       </div>
     </div> 
-    <div class="col-9 p-3 d-none d-md-block">
+    <div class="col-9 p-3 pl-5 text-justify align-items-center d-none d-md-block">
       <h1 class="titre">Association d'Aide aux Démarches Fiscales et Administratives</h1>                
     </div>
   </header>
