addmousover transformations and robots.txt

--- a/contact.html
+++ b/contact.html
@@ -32,17 +32,18 @@
 
 
   <div class="row no-gutters">
-    <div class="pmains col-12">
+    <div class="pmains col-12 position relative">
       <img src="./ressources/clavier ordi.jpg" class="img-responsive" alt="clavier d'ordinateur"/>
-    </div>
+   
+    <div class="comment position-absolute">
+      <h1 class="text-center align-items-center">Nous contacter</h1>
+    </div> 
   </div>
 
 
 
-  <div class="row no-gutters m-3 justify-content-center">
+  <div class="row no-gutters justify-content-center mb-3">
     <article class="cols-sm-12 row-cols-md-1 row-cols-lg-1 p-3">
-      <h1>Nous contacter</h1><br>
-      <br>
       <h2 class="m-1">Nos horaires</h2>
     <p> Nous sommes les mardis et jeudi de 18H00 à 20H00 à la salle Jean-louis Dieux au luc en Provence,<br>
     <br>
@@ -59,7 +60,7 @@
   </div>
 
 
-    <aside class="row row-cols-sm-12 row-cols-md-12 row-cols-lg-12 no-gutters justify-content-center">
+    <aside class="col-12 no-gutters justify-content-center mb-3">
        <iframe class="embed-responsive-item m-1 overflow-hidden"
      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2899.233153302008!2d6.310475315357477!3d43.393055979131006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c94eae3bf552bb%3A0x26069d58b50538d7!2sAvenue%20Pierre%20Gaudin%2C%2083340%20Le%20Luc!5e0!3m2!1sfr!2sfr!4v1623175120323!5m2!1sfr!2sfr"
      width ="550" height="550"
