--- a/evenements.html
+++ b/evenements.html
@@ -20,7 +20,7 @@
       </div>
     </div> 
     <div class="col-9 p-3 pl-5 text-justify align-items-center d-none d-md-block">
-      <h1 class="titre">Association d'Aide aux Démarches Fiscales et Administratives</h1>                
+      <p class="titre">Association d'Aide aux Démarches Fiscales et Administratives</p>                
     </div>
   </header>
 
@@ -33,41 +33,39 @@
  </ul>
 </nav>
 
-  
- <section class="row row-cols-sm-12 row-cols-md-12 no-gutters pt-3 align-items-center">
+<h1 class="titre text-center p-3">Vos déclarations et démarches annuelles et occasionnelles</h1> 
 
-  <h1 class="text-center p-3">Vos déclarations et démarches annuelles et occasionnelles</h1>
+ <section class="row row-cols-sm-12 row-cols-md-6 no-gutters pt-3">
 
-  <div class="evenement col-md-12 justify-content-center border border-primary m-3 p-3">
+   <div class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column justify-content-center">
        <h2>Votre déclaration d'impôt sur le revenu</h2>
     <p>Chaque année nous vous aidons à faire votre déclaration d'impôt sur le revenu en ligne.
     </p>
     <img src="./ressources/déclarations.jpg" class="img-responsive" alt="déclaration d'impots">
-    </div>
- </div>
+  </div>
+ 
 
 
-  <div class="evenement col-md-12 justify-content-center border border-primary m-3 p-3">
+  <div class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column">
     <h2>transports en commun</h2>
     <p> Faites votre abonnement aux transports en commun avant la rentrée
     </p>
     <img src="./ressources/bus.png" class="img-responsive" alt="photo de bus">
   </div>
 
-  <div class="evenement col-md-12 justify-content-center border border-primary m-3 p-3">
-    <h2>Certificats d'immatriculation</h2>
+  <div class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column">
+    <h2>Certificats d'immatriculation</h2> 
     <p>Nous vous aidons pour vos démarches en matière d'immatriculation
     </p>
     <img src="./ressources/cart grise.jpg" class="img-responsive" alt="page de garde carte grise">
   </div>
 
-  <div class="evenement col-md-12 justify-content-center border border-primary m-3 p-3">
+  <div class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column">
     <h2>Aides à la personne</h2>
      <p> Nous vous aidons à créer vos espaces sur les sites internet d'aide à la personne et autres 
       comme les chèques Cesu par exemple.
      </p>
       <img src="./ressources/aide personnes en difficulté.jpg" class="img-responsive" alt="clavier d'ordinateur"/>
-    
   </div>
 
   </section>
