--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img src="./ressources/poignées de mains2.jpg" class="img-responsive" alt="poignée de mains"/>
       
       <div class="comment position-absolute">
-        <center><h1>Venez nous voir</h1></center>
+        <h1 class="text-center align-items-center">Venez nous voir, Nous vous aidons</h1>
       </div> 
       </div>
     </div>
@@ -45,8 +45,8 @@
       <section class="présentation col-12">
         <div class="row no-gutters justify-content-center">
           <article class="col-lg-12 pt-3 d-flex flex-column border border-dark text-justify">
-            <h2 class="text-center">Nous vous aidons</h2>
-            <p class="m-3">
+            <h2 class="text-center align-items-center">Pour vos démarches et déclarations en ligne</h2>
+            <p class="p-3">
             Vous devez faire votre déclaration d’impôt sur le revenu, mais vous ne savez pas où déclarer certains revenus ou réductions d’impôts ?<br>
             <br>
             vous connaissez quelqu’un qui ne peut pas accéder à internet mais qui doit faire sa déclaration en ligne&nbsp;?<br>
@@ -67,9 +67,9 @@
   <section class="asso col-12">
         <div class="row no-gutters justify-content-center">
           <article class="col-lg-12 p-3 d-flex flex-column border border-dark text-justify">
-           <h2 class="text-center">Pour vos démarches et déclarations</h2>  
+           <h2 class="text-center">Quelque soit votre situation</h2>  
           Que vous soyez retraité, en activité, étudiant, vous devez faire vos démarches fiscales
-          (impôts,etc ...), sociales ( allocations familiales, logements étudiants,etc...) et autres comme le 
+          (impôt sur le revenu, IFI, etc ...), sociales ( allocations familiales, logements étudiants,etc...) et autres comme le 
           renouvellement de carte d’identité, carte grise, par internet. 
           Les plus sollicités du moment sont&nbsp;:
           <a href="evenements.html">ici</a><br>
