add links beetween files

--- a/evenements.html
+++ b/evenements.html
@@ -34,7 +34,7 @@
 </nav>
 
 <h1 class="titre text-center p-3">Vos déclarations et démarches annuelles et occasionnelles</h1> 
-
+ <p>Les formalités ci dessous ne sont pas exhaustives. <a href="apropos.html">Contactez-nous</a> pour de plus amples renseignements.</Contactez-nous></p>
  <section class="row row-cols-sm-12 row-cols-md-6 no-gutters pt-3">
 
    <div class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column justify-content-center">
