--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <nav class="mt-3 navbar navbar-expand navbar-dark bg-info">
-           <ul class="navbar-nav">
+        <ul class="navbar-nav">
           <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="#">Accueil</a></li>
           <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="apropos.html">Qui sommes-nous&nbsp;?</a></li>
           <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="evenements.html">vos évènements</a></li>
@@ -35,37 +35,37 @@
       <div class="pmains position-relative">
         <img src="./ressources/poignées de mains2.jpg" class="img-responsive" alt="poignée de mains"/>
       
-      <div class="comment position-absolute">
+        <div class="comment position-absolute">
         <h1 class="text-center align-items-center">Venez nous voir, Nous vous aidons</h1>
-      </div> 
+        </div> 
       </div>
     </div>
 
   
-      <section class="présentation col-12">
-        <div class="row no-gutters justify-content-center">
-          <article class="col-lg-12 pt-3 d-flex flex-column border border-dark text-justify">
-            <h2 class="text-center align-items-center">Pour vos démarches et déclarations en ligne</h2>
-            <p class="p-3">
-            Vous devez faire votre déclaration d’impôt sur le revenu, mais vous ne savez pas où déclarer certains revenus ou réductions d’impôts ?<br>
-            <br>
-            vous connaissez quelqu’un qui ne peut pas accéder à internet mais qui doit faire sa déclaration en ligne&nbsp;?<br>
-            <br>
-            Vous devez renouveler votre Carte d’identité&nbsp;?<br>
-            <br> 
-            Vous aimeriez utiliser les tickets CESU, mais vous ne savez pas comment faire&nbsp;?<br>
-            <br>
-            La quasi-totalité des démarches se font aujourd’hui en ligne. Mais, pas tout le monde n’a accès à internet.<br>
-            Vous connaissez certainement dans votre entourage des personnes qui ne l’utilisent jamais.<br>
-            Et si vous utilisez internet, les sites administratifs ne sont pas toujours faciles à comprendre.
-            </p>
-          </article>
-        </div>  
-     </section>
+ <section class="présentation col-12">
+    <div class="row no-gutters justify-content-center">
+      <article class="col-lg-12 p-3 d-flex flex-column border border-dark text-justify">
+        <h2 class="text-center align-items-center">Pour vos démarches et déclarations en ligne</h2>
+        <p>
+        Vous devez faire votre déclaration d’impôt sur le revenu, mais vous ne savez pas où déclarer certains revenus ou réductions d’impôts ?<br>
+        <br>
+        vous connaissez quelqu’un qui ne peut pas accéder à internet mais qui doit faire sa déclaration en ligne&nbsp;?<br>
+        <br>
+        Vous devez renouveler votre Carte d’identité&nbsp;?<br>
+        <br> 
+        Vous aimeriez utiliser les tickets CESU, mais vous ne savez pas comment faire&nbsp;?<br>
+        <br>
+        La quasi-totalité des démarches se font aujourd’hui en ligne. Mais, pas tout le monde n’a accès à internet.<br>
+        Vous connaissez certainement dans votre entourage des personnes qui ne l’utilisent jamais.<br>
+        Et si vous utilisez internet, les sites administratifs ne sont pas toujours faciles à comprendre.
+        </p>
+      </article>
+    </div>  
+ </section>
 
  
   <section class="asso col-12">
-        <div class="row no-gutters justify-content-center">
+      <div class="row no-gutters justify-content-center">
           <article class="col-lg-12 p-3 d-flex flex-column border border-dark text-justify">
            <h2 class="text-center">Quelque soit votre situation</h2>  
           Que vous soyez retraité, en activité, étudiant, vous devez faire vos démarches fiscales
@@ -85,32 +85,29 @@
           ordinateurs et imprimantes personnels.
          
          </article>
-       </div>  
+     </div>  
  </section>
  
  
  <footer class="h-300 row no-gutters p-3 border border-dark bg-secondary">
-  <div class="col-4">
-    <p class="p-2 m-1 text-left align-middle"> copyright 2021 Tous droits réservés</p>
-  </div> 
+   <div class="col-4">
+     <p class="p-2 m-1 text-left align-middle"> copyright 2021 Tous droits réservés</p>
+   </div> 
 
-  <div class="col-8">
-    <ul class="icons list-unstyled list-inline"> 
-      <li><ahref="<i class="fab fa-facebook"></i></a></li>
-      <li><ahref="<i class="fab fa-twitter-square"></i></a></li>
-      <li><ahref="<i class="fab fa-linkedin-in"></i></a></li>
-      <li><ahref=<i class="fab fa-instagram"></i></a></li>
-    </ul>  
-  </div>
+   <div class="col-8">
+     <ul class="icons list-unstyled list-inline"> 
+       <li><ahref="<i class="fab fa-facebook"></i></a></li>
+       <li><ahref="<i class="fab fa-twitter-square"></i></a></li>
+       <li><ahref="<i class="fab fa-linkedin-in"></i></a></li>
+       <li><ahref=<i class="fab fa-instagram"></i></a></li>
+     </ul>  
+   </div>
 
-  <div class="col-12">
-    <p class="p-2 text-left">N.B. : ce site est fictif, il s'agit d'un exercice.</p>
-  </div>
-  
+   <div class="col-12">
+     <p class="p-2 text-left">N.B. : ce site est fictif, il s'agit d'un exercice.</p>
+   </div>
   
 </footer>
-
-
 
  
  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
