add dates to evenements

--- a/evenements.html
+++ b/evenements.html
@@ -39,7 +39,8 @@
 
    <div class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column justify-content-center">
        <h2>Votre déclaration d'impôt sur le revenu</h2>
-    <p>Chaque année nous vous aidons à faire votre déclaration d'impôt sur le revenu en ligne.
+    <p>Chaque année nous vous aidons à faire votre déclaration d'impôt sur le revenu en ligne.<br>
+      La date limite de dépôt est le mardi 8 juin. Vous pouvez la corriger jusqu'à mi-décembre"
     </p>
     <img src="./ressources/déclarations.jpg" class="img-responsive" alt="déclaration d'impots">
   </div>
@@ -48,7 +49,9 @@
 
   <div class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column">
     <h2>transports en commun</h2>
-    <p> Faites votre abonnement aux transports en commun avant la rentrée
+    <p> Faites votre abonnement aux transports en commun avant la rentrée.<br>
+      Attention vous avez jusqu'au 31 juillet pour les pass Zou.
+
     </p>
     <img src="./ressources/bus.png" class="img-responsive" alt="photo de bus">
   </div>
