change photo index.html

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
  
     <div class="row no-gutters">
       <div class="pmains position-relative">
-        <img src="./ressources/poignées de mains2.jpg" class="img-responsive" alt="poignée de mains"/>
+        <img src="./ressources/handshake-440959_640.jpg" class="img-responsive" alt="poignée de mains"/>
       
         <div class="comment position-absolute">
-        <h1 class="text-center align-items-center">Venez nous voir, Nous vous aidons</h1>
+        <h1 class="titre text-center align-items-center">Venez nous voir, Nous vous aidons</h1>
         </div> 
       </div>
     </div>
