change photos to lighters ones

--- a/apropos.html
+++ b/apropos.html
@@ -44,7 +44,7 @@
             
           <article class="col p-2">
               <div class="card">
-                  <img src="./ressources/président.jpg" class="card-img-top rounded-lg" alt="portait président de l'association">
+                  <img src="./ressources/président3.jpg" class="card-img-top rounded-lg" alt="portait président de l'association">
                    <div class="card-body">
                       <h5 class="card-title text-center">Pierre</h5>
                         <ul class="list-group list-group-flush">
@@ -72,9 +72,9 @@
 
             <article class="col p-2">
                 <div class="card">
-                    <img src="./ressources/assistante sociale.jpg" class="card-img-top rounded-lg" alt="portrait trésorière de l'association">
+                    <img src="./ressources/trésorière.jpg" class="card-img-top rounded-lg" alt="portrait trésorière de l'association">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Victorine</h5>
+                        <h5 class="card-title text-center">Géraldine</h5>
                           <ul class="list-group list-group-flush">
                             <li class="list-group-item">Trésorière de l'association</li>
                             <li class="list-group-item">Retraitée de</li>
@@ -83,7 +83,7 @@
                     </div>
                 </div>
             </article>
-            
+
           </div>
       </section>
     </div>
