--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
      </nav>
  
     <div class="row no-gutters">
-      <div class="pmains position-relative">
-        <img src="./ressources/handshake-440959_640.jpg" class="img-responsive" alt="poignée de mains"/>
+      <div class="pmains col-12 position-relative">
+        <img src="./ressources/handshake-3298455_1280.jpg" class="img-responsive" alt="poignée de mains"/>
       
         <div class="comment position-absolute">
         <h1 class="titre text-center align-items-center">Venez nous voir, Nous vous aidons</h1>
