--- a/apropos.html
+++ b/apropos.html
@@ -39,7 +39,7 @@
   </div>    
 
   <div class="row">
-    <section class="cartes border border-primary m-3">
+    <section class="cartes border border-dark m-3">
         <div class="row row-cols-sm-3 row-cols-md-4 justify-content-center m-2">
             
           <article class="col p-2">
@@ -89,7 +89,7 @@
     </div>
     
     <div class="row no-gutters m-3">
-      <article class="row row-cols-sm-1 row-cols-md-8 text-justify border border-primary p-3">
+      <article class="row row-cols-sm-1 row-cols-md-8 text-justify border border-dark p-3">
         <h2 class="m-1">Notre association</h2>
       <p> Devant la constatation que les sites administratifs ne sont pas toujours compréhensibles mais
         de plus en plus incontournables, nous avons créé l'Association d'Aide aux Déclarations et Démarches Administratives
