--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
 
 
-  <div class="row no-gutters justify-content-center mb-3">
+  <div class="row no-gutters justify-content-center border border-dark mb-3">
     <article class="cols-sm-12 row-cols-md-1 row-cols-lg-1 p-3">
       <h2 class="m-1">Nos horaires</h2>
     <p> Nous sommes les mardis et jeudi de 18H00 à 20H00 à la salle Jean-louis Dieux au luc en Provence,<br>
