--- a/evenements.html
+++ b/evenements.html
@@ -37,39 +37,39 @@
  <p>Les formalités ci dessous ne sont pas exhaustives. <a href="apropos.html">Contactez-nous</a> pour de plus amples renseignements.</Contactez-nous></p>
  <section class="row row-cols-sm-12 row-cols-md-6 no-gutters pt-3">
 
-   <div class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column justify-content-center">
+   <article class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column justify-content-center">
        <h2>Votre déclaration d'impôt sur le revenu</h2>
     <p>Chaque année nous vous aidons à faire votre déclaration d'impôt sur le revenu en ligne.<br>
-      La date limite de dépôt est le mardi 8 juin. Vous pouvez la corriger jusqu'à mi-décembre"
+      La date limite de dépôt est le mardi 8 juin. Vous pouvez la corriger jusqu'à mi-décembre.
     </p>
     <img src="./ressources/déclarations.jpg" class="img-responsive" alt="déclaration d'impots">
-  </div>
+  </article>
  
 
 
-  <div class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column">
+  <article class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column">
     <h2>transports en commun</h2>
     <p> Faites votre abonnement aux transports en commun avant la rentrée.<br>
-      Attention vous avez jusqu'au 31 juillet pour les pass Zou.
+      Attention vous avez jusqu'au 31 juillet pour les pass Zou étudiants.
 
     </p>
     <img src="./ressources/bus.png" class="img-responsive" alt="photo de bus">
-  </div>
+  </article>
 
-  <div class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column">
+  <article class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column">
     <h2>Certificats d'immatriculation</h2> 
     <p>Nous vous aidons pour vos démarches en matière d'immatriculation
     </p>
     <img src="./ressources/cart grise.jpg" class="img-responsive" alt="page de garde carte grise">
-  </div>
+  </article>
 
-  <div class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column">
+  <article class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column">
     <h2>Aides à la personne</h2>
      <p> Nous vous aidons à créer vos espaces sur les sites internet d'aide à la personne et autres 
       comme les chèques Cesu par exemple.
      </p>
       <img src="./ressources/aide personnes en difficulté.jpg" class="img-responsive" alt="clavier d'ordinateur"/>
-  </div>
+    </article>
 
   </section>
   
