--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="aide démarches administratives fiscales déclarations impôt allocationsfamiliales social cesu immatriculation bus transport" />
+    <meta name="description" content="association d'aide aux démarches administratives et fiscales, déclarations d'impôts, aides sociales, cesu, immatriculation, bus, transport, créations d'espace utilisateur " />
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/581467febc.js" crossorigin="anonymous"></script>
