add responsive commands

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </header>
 
-    <nav class="mt-3 navbar navbar-expand navbar-dark bg-info">
+    <nav class="col-12 mt-3 navbar navbar-brand navbar-expand-md navbar-dark bg-info">
         <ul class="navbar-nav">
           <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="#">Accueil</a></li>
           <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="apropos.html">Qui sommes-nous&nbsp;?</a></li>
@@ -36,7 +36,7 @@
         <img src="./ressources/handshake-3298455_1280.jpg" class="img-responsive" alt="poignée de mains"/>
       
         <div class="comment position-absolute">
-        <h1 class="titre text-center align-items-center">Venez nous voir, Nous vous aidons</h1>
+        <h1>Venez nous voir</h1>
         </div> 
       </div>
     </div>
@@ -90,11 +90,11 @@
  
  
  <footer class="h-300 row no-gutters p-3 border border-dark bg-secondary">
-   <div class="col-4">
+   <div class="col-md-4 col-sm-12 p-3">
      <p class="p-2 m-1 text-left align-middle"> copyright 2021 Tous droits réservés</p>
    </div> 
 
-   <div class="col-8">
+   <div class="col-md-8 col-sm-12 p-3">
      <ul class="icons list-unstyled list-inline"> 
        <li><ahref="<i class="fab fa-facebook"></i></a></li>
        <li><ahref="<i class="fab fa-twitter-square"></i></a></li>
@@ -103,7 +103,7 @@
      </ul>  
    </div>
 
-   <div class="col-12">
+   <div class="col-12 p-3">
      <p class="p-2 text-left">N.B. : ce site est fictif, il s'agit d'un exercice.</p>
    </div>
   
