--- a/evenements.html
+++ b/evenements.html
@@ -24,7 +24,7 @@
     </div>
   </header>
 
-  <nav class="mt-3 navbar navbar-expand navbar-dark bg-info">
+  <nav class="col-12 mt-3 navbar navbar-brand navbar-expand-md navbar-dark bg-info">
     <ul class="navbar-nav">
    <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="index.html">Accueil</a></li>
    <li class="nav-item pl-3 pr-3 d-flex align-items-center"><a class="nav-link" href="apropos.html">Qui sommes-nous&nbsp;?</a></li>
@@ -33,7 +33,7 @@
  </ul>
 </nav>
 
-<h1 class="titre text-center p-3">Vos déclarations et démarches annuelles et occasionnelles</h1> 
+<h1 class="titre text-center p-1">Vos déclarations et démarches annuelles et épisodiques</h1> 
  <p>Les formalités ci dessous ne sont pas exhaustives. <a href="apropos.html">Contactez-nous</a> pour de plus amples renseignements.</Contactez-nous></p>
  <section class="row row-cols-sm-12 row-cols-md-6 no-gutters pt-3">
 
@@ -57,7 +57,7 @@
   </article>
 
   <article class="evenement col-md-6 border border-dark mb-3 p-3 d-flex flex-column">
-    <h2>Certificats d'immatriculation</h2> 
+    <h2>Véhicules</h2>
     <p>Nous vous aidons pour vos démarches en matière d'immatriculation
     </p>
     <img src="./ressources/cart grise.jpg" class="img-responsive" alt="page de garde carte grise">
@@ -74,11 +74,11 @@
   </section>
   
   <footer class="h-300 row no-gutters p-3 bg-secondary border border-dark">
-    <div class="col-4">
+    <div class="col-md-4 col-sm-12 p-3">
       <p class="p-2 m-1 text-left align-middle"> copyright 2021 Tous droits réservés</p>
     </div> 
   
-    <div class="col-8">
+    <div class="col-md-8 col-sm-12 p-3">
       <ul class="icons list-unstyled list-inline"> 
         <li><ahref="<i class="fab fa-facebook"></i></a></li>
         <li><ahref="<i class="fab fa-twitter-square"></i></a></li>
@@ -87,7 +87,7 @@
       </ul>  
     </div>
   
-    <div class="col-12">
+    <div class="col-12 p-3">
       <p class="p-2 text-left">N.B. : ce site est fictif, il s'agit d'un exercice.</p>
     </div>
     
