bug image xs responsive

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
  
     <div class="row no-gutters">
       <div class="pmains col-12 position-relative">
-        <img src="./ressources/handshake-3298455_1280.jpg" class="img-responsive" alt="poignée de mains"/>
+        <img src="./ressources/handshake-3298455_1280.jpg" class="img-responsive" alt="poignée de mains" style="width: 100%"/>
       
         <div class="comment position-absolute">
         <h1>Venez nous voir</h1>
