--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
   <div class="row no-gutters">
     <div class="pmains col-12 position relative">
-      <img src="./ressources/clavier ordi.jpg" class="img-responsive" alt="clavier d'ordinateur"/>
+      <img src="./ressources/clavier ordi.jpg" class="img-responsive" style="width: 100%" alt="clavier d'ordinateur"/>
    
     <div class="comment position-absolute">
       <h1>Nous contacter</h1>
